<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/nome_list"
         />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_resultado"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
         />

    <TextView
        android:id="@+id/txt_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_data"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
         />

</LinearLayout>